DuPont DevSB/src/objects/pse__Assignment_Project_Phase__c.object
<CustomObject>
    <customHelpPage>pse__AssignmentProjectPhaseHelp</customHelpPage>
    <description>Associates assignment records with project phase records</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <description>Master detail relationship to Assignment</description>
        <inlineHelpText>Master detail relationship to Assignment</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Assignment Project Phases</relationshipLabel>
        <relationshipName>Assignment_Project_Phases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Project_Phase__c</fullName>
        <description>Master detail relationship to Project Phase</description>
        <inlineHelpText>Master detail relationship to Project Phase</inlineHelpText>
        <label>Project Phase</label>
        <referenceTo>pse__Project_Phase__c</referenceTo>
        <relationshipLabel>Assignment Project Phases</relationshipLabel>
        <relationshipName>Assignment_Project_Phases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Assignment Project Phase</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Project Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pse__Assignment_Phase_Project_Mismatch</fullName>
        <active>true</active>
        <description>Validates whether the project phase and assignment belong to the same project.</description>
        <errorConditionFormula>pse__Assignment__r.pse__Project__c != pse__Project_Phase__r.pse__Project__c</errorConditionFormula>
        <errorMessage>Cannot associate the project phase with the assignment. These records do not belong to the same project. Enter a project phase and assignment that belong to the same project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Assignmnet_Phase_Project_Mismatch</fullName>
        <active>false</active>
        <description>[DEPRECATED(Duplicate)] Validates whether the project phase and assignment belong to the same project.</description>
        <errorConditionFormula>pse__Assignment__r.pse__Project__c != pse__Project_Phase__r.pse__Project__c</errorConditionFormula>
        <errorMessage>Cannot associate a the project phase with the assignment. These records do not belong to the same project. Enter a project phase and assignment that belong to the same project.</errorMessage>
    </validationRules>
</CustomObject>